[gd_scene load_steps=3 format=3 uid="uid://dbwmdpvenittv"]

[ext_resource type="Script" path="res://addons/DialogHelperTool/DialogHelperTool.gd" id="1_eb7vm"]
[ext_resource type="Script" path="res://addons/DialogHelperTool/SceneLineEdit.gd" id="2_vieds"]

[node name="DialogHelperTool" type="Control"]
layout_mode = 3
anchor_top = -0.151
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 163.08
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eb7vm")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.096
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 103.68
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30

[node name="Scene" type="Control" parent="TabContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Scene"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.218
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 224.54
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="GridContainer" type="GridContainer" parent="TabContainer/Scene/MarginContainer"]
layout_mode = 2
columns = 3

[node name="Label" type="Label" parent="TabContainer/Scene/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Scene Folder"

[node name="SceneFolder" type="LineEdit" parent="TabContainer/Scene/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(600, 2.08165e-12)
layout_mode = 2
script = ExtResource("2_vieds")

[node name="Button" type="Button" parent="TabContainer/Scene/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
text = "..."

[node name="Label2" type="Label" parent="TabContainer/Scene/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Start timeline
"

[node name="TimelineList" type="OptionButton" parent="TabContainer/Scene/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(2.08165e-12, 45)
layout_mode = 2

[node name="Button2" type="Button" parent="TabContainer/Scene/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
text = "..."

[node name="Label3" type="Label" parent="TabContainer/Scene/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Scene 
"

[node name="SceneFile" type="LineEdit" parent="TabContainer/Scene/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(600, 45)
layout_mode = 2

[node name="Button3" type="Button" parent="TabContainer/Scene/MarginContainer/GridContainer"]
layout_mode = 2
text = "..."

[node name="Timeline" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Backgrounds" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Videos" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Audios" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Characters" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[connection signal="scene_folder_changed" from="TabContainer/Scene/MarginContainer/GridContainer/SceneFolder" to="." method="_on_scene_folder_changed"]
